test/sema/illegal-subscript-index-type.delta
// RUN: %check_errors %not %delta -typecheck %s

extern int[5]* foo();

void main() {
    var p = foo();
    // CHECK: [[@LINE+1]]:15: error: illegal index type 'bool', expected 'int'
    var e = p[false];
}
